Make web rendering look good

--- a/basil/templates/snippet.html
+++ b/basil/templates/snippet.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="snippet-content"></div>
+    <div id="snippet-{{ snippet_id }}"></div>
 
     <script src="/js/discord-markdown.min.js"></script>
     <script src="/js/snippet.js"></script>
