--- a/static/css/series_index.css
+++ b/static/css/series_index.css
@@ -7,12 +7,12 @@ body {
     padding: 0 .25rem;
 }
 
-#index-title {
+#page-title {
     text-align: center;
     margin: 1rem 0;
 }
 
-#index-nav {
+#title-index-nav {
     justify-content: center;
 }
 
