--- a/static/css/series_index.css
+++ b/static/css/series_index.css
@@ -9,18 +9,18 @@ body {
 
 #page-title {
     text-align: center;
-    margin: 1rem 0;
+    margin: 0.5rem 0;
 }
 
 #index-tab-content .nav {
     justify-content: center;
-    margin: 1rem 0;
+    margin: 0.4rem 0;
 }
 
 .index-nav-item {
     border: 2px solid;
     border-radius: 13px;
-    margin: 0 0.3rem;
+    margin: 0.25rem 0.3rem;
 }
 
 .index-nav-item .nav-link {
