--- a/static/css/series_index.css
+++ b/static/css/series_index.css
@@ -14,7 +14,11 @@ body {
 
 #index-tab-content .nav {
     justify-content: center;
-    margin: 0.4rem 0;
+    margin: 0.3rem 0;
+}
+
+.series-list-container {
+    margin: 1.5rem 0;
 }
 
 .index-nav-item {
