Fix login indicator on series pages

--- a/basil/web/templates/series.html.j2
+++ b/basil/web/templates/series.html.j2
@@ -30,7 +30,7 @@
                     </li>
                 </ul>
                 <div class="d-flex ms-auto">
-                    <span class="cur-user-label navbar-text me-4">
+                    <span class="navbar-text me-4" id="cur-user-label">
                         Logged in as <span id="cur-user-name"></span>
                     </span>
                     <a class="btn btn-primary" href="/api/auth/login" role="button" id="login-btn">
