--- a/basil/web/templates/series.html.j2
+++ b/basil/web/templates/series.html.j2
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbar-content">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="series_index.html">Series Index</a>
+                        <a class="nav-link" href="/series_index.html">Series Index</a>
                     </li>
                 </ul>
                 <div class="d-flex ms-auto">
