Minor styling changes to make things look less squished

--- a/static/css/series_index.css
+++ b/static/css/series_index.css
@@ -147,19 +147,34 @@ a, .nav-link {
 .series-info-container > span {
     padding: 0 0.75rem;
     border-right: 1px solid;
+    width: max-content;
 }
 
 .series-info-container > span:first-child {
     padding-left: 0;
 }
 
-.series-info-container > span:last-child {
+.series-info-container > .series-update-time {
+    padding-right: 0;
+    border-right: none;
+}
+
+.series-info-container > .series-edit-error {
+    margin-left: 0.75rem;
+    border-left: 1px solid;
+
     padding-right: 0;
     border-right: none;
 }
 
 .series-content-warnings {
     font-weight: bold;
+}
+
+.series-btn-container {
+    width: 25%;
+    margin-left: 1rem;
+    text-align: end;
 }
 
 .series-title-input {
